Table users {
  id int [pk, increment]
  name varchar
  email varchar(100) [unique, not null]
  password varchar(8) [not null]
  role int
  created_at timestamp [default: `now()`]
}

Table roles {
  id int [pk]
  name varchar(20) [not null]
}

Table statuses {
  id int [pk]
  name varchar(20) [not null]
}

Table surveys {
  id int [pk, increment]
  author_id int [not null]
  title varchar(100) [not null]
  description varchar(255)
  status int [not null, default: 1]
  published_at timestamp [null]
  closed_at timestamp [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table types {
  id int [pk]
  name varchar(20) [not null] // 'single_choice', 'multiple_choice', 'text'
}

Table questions {
  id int [pk, increment]
  survey_id int [not null]
  type int [not null]
  text varchar(255) [not null]
  order integer [not null]
  required boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table options {
  id int [pk, increment]
  question_id int [not null]
  text varchar(125) [not null]
  order integer [not null]
}

Table responses {
  id int [pk, increment]
  survey_id int [not null]
  respondent_id int [not null]
  completed_at timestamp [default: `now()`]
  
  indexes {
    (survey_id, respondent_id) [unique, name: 'unique_respondent_per_survey']
  }
}

Table answers {
  id int [pk, increment]
  response_id int [not null]
  question_id int [not null]
  option_id int [null] 
  text_value varchar(150) [null] 
  
  indexes {
    (response_id, question_id) [unique, name: 'one_answer_per_question']
  }
}

Ref: "surveys"."author_id" > "users"."id"

Ref: "questions"."survey_id" > "surveys"."id"

Ref: "options"."question_id" > "questions"."id"

Ref: "responses"."survey_id" > "surveys"."id"

Ref: "responses"."respondent_id" > "users"."id"

Ref: "answers"."response_id" > "responses"."id"

Ref: "answers"."question_id" > "questions"."id"

Ref: "answers"."option_id" > "options"."id"

Ref: "roles"."id" < "users"."role"

Ref: "statuses"."id" < "surveys"."status"

Ref: "types"."id" < "questions"."type"